--- a/BinaryTree/BinaryTree.vcxproj
+++ b/BinaryTree/BinaryTree.vcxproj
@@ -121,15 +121,42 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="btnode.h" />
-    <ClInclude Include="btree.h" />
-    <ClInclude Include="btree_implementation.h" />
-    <ClInclude Include="btree_insert.h" />
-    <ClInclude Include="btree_remove.h" />
-    <ClInclude Include="btree_search.h" />
-    <ClInclude Include="btree_solveoverflow.h" />
-    <ClInclude Include="btree_solveunderflow.h" />
-    <ClInclude Include="btree_test.h" />
+    <ClInclude Include="BinNode.h" />
+    <ClInclude Include="binnode_implementation.h" />
+    <ClInclude Include="binnode_insert.h" />
+    <ClInclude Include="binnode_macro.h" />
+    <ClInclude Include="binnode_macro_avl.h" />
+    <ClInclude Include="binnode_macro_basic.h" />
+    <ClInclude Include="binnode_macro_redblack.h" />
+    <ClInclude Include="binnode_size.h" />
+    <ClInclude Include="binnode_stretchbyzag.h" />
+    <ClInclude Include="binnode_stretchbyzig.h" />
+    <ClInclude Include="binnode_succ.h" />
+    <ClInclude Include="binnode_travinorder.h" />
+    <ClInclude Include="binnode_travinorder_i1.h" />
+    <ClInclude Include="binnode_travinorder_i2.h" />
+    <ClInclude Include="binnode_travinorder_i3.h" />
+    <ClInclude Include="binnode_travinorder_i4.h" />
+    <ClInclude Include="binnode_travinorder_r.h" />
+    <ClInclude Include="binnode_travlevel.h" />
+    <ClInclude Include="binnode_travpostorder.h" />
+    <ClInclude Include="binnode_travpostorder_i.h" />
+    <ClInclude Include="binnode_travpostorder_r.h" />
+    <ClInclude Include="binnode_travpreorder.h" />
+    <ClInclude Include="binnode_travpreorder_i1.h" />
+    <ClInclude Include="binnode_travpreorder_i2.h" />
+    <ClInclude Include="binnode_travpreorder_r.h" />
+    <ClInclude Include="binnode_zag.h" />
+    <ClInclude Include="binnode_zig.h" />
+    <ClInclude Include="bintree.h" />
+    <ClInclude Include="bintree_attach.h" />
+    <ClInclude Include="bintree_implementation.h" />
+    <ClInclude Include="bintree_insert.h" />
+    <ClInclude Include="bintree_remove.h" />
+    <ClInclude Include="bintree_secede.h" />
+    <ClInclude Include="bintree_size.h" />
+    <ClInclude Include="bintree_test.h" />
+    <ClInclude Include="bintree_updateheight.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
