--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ cmake_minimum_required(VERSION 2.8)
 set(CMAKE_CXX_STANDARD 11)
 add_subdirectory(vector)
 add_subdirectory(List)
+add_subdirectory(stack)
+add_subdirectory(queue)
 add_subdirectory(test)
