实现了基本的二叉树数据结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ add_subdirectory(vector)
 add_subdirectory(List)
 add_subdirectory(stack)
 add_subdirectory(queue)
+add_subdirectory(BinaryTree)
 add_subdirectory(test)
