完成了二叉树的典型应用——非前缀最优编码树, 即哈弗曼树

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,6 @@ add_subdirectory(List)
 add_subdirectory(stack)
 add_subdirectory(queue)
 add_subdirectory(BinaryTree)
+add_subdirectory(PFC)
 add_subdirectory(test)
+
