完成了哈希表

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,6 @@ add_subdirectory(PFC)
 add_subdirectory(graph)
 add_subdirectory(BST)
 add_subdirectory(BTree)
+add_subdirectory(Dict)
 add_subdirectory(test)
 
