--- a/stack/CMakeLists.txt
+++ b/stack/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(stack stack.cpp convert.cpp recursion.cpp queens.cpp)
+add_executable(stack stack.cpp)
 add_executable(convert convert.cpp)
 add_executable(recursion recursion.cpp)
 add_executable(queens queens.cpp)
