--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(PriorityQueue)
 add_subdirectory(StringMatch)
 add_subdirectory(Select)
 add_subdirectory(test)
+add_subdirectory(contest)
