--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(StringMatch)
 add_subdirectory(Select)
 add_subdirectory(test)
 add_subdirectory(contest)
+add_subdirectory(leetcode)
